Test out a function to confirm pwd

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <label for="pwd_confirm">CONFIRM PASSWORD</label>
         <input type="password" id="pwd_confirm" name="pwd_confirm" placeholder="Confirm your password">
         <p>Enter your password again.</p>
-        <p id="confim_msg"></p>
+        <p id="confirm_msg"></p>
     </form>
 
     <button onclick="validatePwd()" id="button">Create account</button>
