Add event to pwd_confirm

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <p id="confirm_msg"></p>
     </form>
 
-    <button onclick="validatePwd()" id="button">Create account</button>
+    <button" id="button">Create account</button>
     <p>Already have an account?<span><a href="#">Log in.</a></span></p>
 </body>
 </html>
