Another styling session

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 
         <section id="right-side">
             <div class="right-side-top">
-                <h1>Register now to book your French conversation session!</h1>
+                <h1>Register now to book your <em>French conversation session!</em></h1>
                 
                 <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.</p>
 
-                <p>Sign up now to get started</p>
+                <p>Sign up <i>now</i> to get started</p>
 
-                <p>You know you want to.</p>
+                <p>You <i>know</i> you want to.</p>
             </div>
 
             <form action="https://httpbin.org/post" method="post">
@@ -68,8 +68,8 @@
         
             <div class="form-bottom">
                 <div id="create-acc">
-                    <button type="submit" id="button">Create account</button>
-                    <p>Already have an account?<span><a href="#">Log in.</a></span></p>
+                    <button type="submit" id="button">Create Account</button>
+                    <p class="old-users">Already have an account?<span><a href="#">Log in.</a></span></p>
                 </div>
             </form>
         </section>
